tests/max_encoded_len_ui/union.stderr
error: Union types are not supported.
 --> $DIR/union.rs:4:1
  |
4 | union Union {
  | ^^^^^
